Fix zoom issues

--- a/index.html
+++ b/index.html
@@ -2,85 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom File Viewer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>PDF Viewer</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.9.359/pdf.min.js"></script>
-    <link rel="stylesheet" href="assets/styles.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        body, html {
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f0f0f0;
-        }
-        #fileViewer {
-            max-width: 800px;
-            width: 100%;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            border-radius: 5px;
             overflow: hidden;
-        }
-        #content {
             width: 100%;
-            height: 500px;
-            overflow: auto;
+            height: 100%;
+        }
+        .pdf-viewer {
+            position: relative;
+            width: 100%;
+            height: 100vh;
+            overflow: hidden;
         }
         .pdf-container {
             width: 100%;
             height: 100%;
-            overflow: hidden;
-            position: relative;
-        }
-        .pdf-page {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            touch-action: none;
         }
         .pdf-navigation {
             position: absolute;
-            bottom: 10px;
-            left: 0;
-            right: 0;
-            display: flex;
-            justify-content: center;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
         }
         .nav-button {
-            background: rgba(0,0,0,0.5);
+            background: rgba(0, 0, 0, 0.5);
             color: white;
             border: none;
-            padding: 5px 10px;
+            padding: 10px;
             margin: 0 5px;
             cursor: pointer;
-        }
-        .audio-viewer, .video-viewer {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .text-viewer {
-            padding: 20px;
-            white-space: pre-wrap;
-            word-wrap: break-word;
-        }
-        .image-viewer {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .image-viewer img {
-            max-width: 100%;
-            max-height: 100%;
-            object-fit: contain;
         }
     </style>
 </head>
@@ -100,10 +56,8 @@
         let scale = 1.0;
         let isPanning = false;
         let panOffset = { x: 0, y: 0 };
-        let containerSize = { width: 0, height: 0 };
-        const pdfContainer = document.getElementById('pdf-container');
-        let lastTouchDistance = null;
         let lastPanPosition = null;
+        const pdfContainer = document.getElementById('pdf-container');
 
         pdfjsLib.getDocument(pdfUrl).promise.then(pdf => {
             pdfDoc = pdf;
@@ -113,7 +67,7 @@
 
         function renderPage(pageNum) {
             pdfDoc.getPage(pageNum).then(page => {
-                const viewport = page.getViewport({ scale: 1 });
+                const viewport = page.getViewport({ scale: scale });
                 const canvas = document.createElement('canvas');
                 const context = canvas.getContext('2d');
                 canvas.height = viewport.height;
@@ -127,12 +81,17 @@
 
                 pdfContainer.innerHTML = '';
                 pdfContainer.appendChild(canvas);
+                updateTransform();
             });
         }
 
         function updateNavButtons() {
             document.getElementById('prev-button').disabled = currentPage <= 1;
             document.getElementById('next-button').disabled = currentPage >= pdfDoc.numPages;
+        }
+
+        function updateTransform() {
+            pdfContainer.style.transform = `translate(${panOffset.x}px, ${panOffset.y}px) scale(${scale})`;
         }
 
         document.getElementById('prev-button').addEventListener('click', () => {
@@ -152,24 +111,35 @@
         });
 
         pdfContainer.addEventListener('wheel', (e) => {
-            if (e.ctrlKey) {
-                e.preventDefault();
-                const zoomFactor = 1.1;
-                scale = e.deltaY < 0 ? scale * zoomFactor : scale / zoomFactor;
-                scale = Math.min(Math.max(0.5, scale), 10);
-                renderPage(currentPage);
+            e.preventDefault();
+            const zoomFactor = 1.1;
+            scale = e.deltaY < 0 ? scale * zoomFactor : scale / zoomFactor;
+            scale = Math.min(Math.max(0.5, scale), 10);
+            renderPage(currentPage);
+        });
+
+        pdfContainer.addEventListener('mousedown', (e) => {
+            isPanning = true;
+            lastPanPosition = { x: e.clientX, y: e.clientY };
+        });
+
+        document.addEventListener('mousemove', (e) => {
+            if (isPanning) {
+                const deltaX = e.clientX - lastPanPosition.x;
+                const deltaY = e.clientY - lastPanPosition.y;
+                panOffset.x += deltaX;
+                panOffset.y += deltaY;
+                lastPanPosition = { x: e.clientX, y: e.clientY };
+                updateTransform();
             }
         });
 
+        document.addEventListener('mouseup', () => {
+            isPanning = false;
+        });
+
         pdfContainer.addEventListener('touchstart', (e) => {
-            if (e.touches.length === 2) {
-                const touch1 = e.touches[0];
-                const touch2 = e.touches[1];
-                lastTouchDistance = Math.hypot(
-                    touch1.clientX - touch2.clientX,
-                    touch1.clientY - touch2.clientY
-                );
-            } else if (e.touches.length === 1) {
+            if (e.touches.length === 1) {
                 isPanning = true;
                 lastPanPosition = {
                     x: e.touches[0].clientX,
@@ -179,25 +149,8 @@
         });
 
         pdfContainer.addEventListener('touchmove', (e) => {
-            if (e.touches.length === 2) {
-                e.preventDefault();
-                const touch1 = e.touches[0];
-                const touch2 = e.touches[1];
-                const currentDistance = Math.hypot(
-                    touch1.clientX - touch2.clientX,
-                    touch1.clientY - touch2.clientY
-                );
-
-                if (lastTouchDistance !== null) {
-                    const zoomFactor = currentDistance / lastTouchDistance;
-                    scale *= zoomFactor;
-                    scale = Math.min(Math.max(0.5, scale), 10);
-                    renderPage(currentPage);
-                }
-
-                lastTouchDistance = currentDistance;
-            } else if (e.touches.length === 1 && isPanning) {
-                e.preventDefault();
+            e.preventDefault();
+            if (e.touches.length === 1 && isPanning) {
                 const currentPosition = {
                     x: e.touches[0].clientX,
                     y: e.touches[0].clientY
@@ -206,15 +159,19 @@
                 panOffset.x += currentPosition.x - lastPanPosition.x;
                 panOffset.y += currentPosition.y - lastPanPosition.y;
 
-                pdfContainer.style.transform = `translate(${panOffset.x}px, ${panOffset.y}px)`;
+                updateTransform();
 
                 lastPanPosition = currentPosition;
             }
         });
 
         pdfContainer.addEventListener('touchend', () => {
-            lastTouchDistance = null;
             isPanning = false;
+        });
+
+        // Prevent default pinch zoom
+        document.addEventListener('gesturestart', (e) => {
+            e.preventDefault();
         });
     </script>
 </body>
